# ingestion_agent

./: .env.template  .pre-commit-config.yaml  LICENSE  pyproject.toml
app/: main.py
config/: settings.py
src/ingestion_agent/tools/: calculator.py  current_date.py  current_time.py  describe_dataset.py  get_statistics.py  web_search.py
src/ingestion_agent/utils/: loader.py
